<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martynaskairys.udacityquizappalpha.TimeQuizResultsActivity">

    <TextView
        android:id="@+id/timePerQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/time_per_quiz"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <TextView
        android:id="@+id/scoreApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:textSize="24sp"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toBottomOf="@+id/timePerQuiz"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toBottomOf="@+id/scoreApple" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showHistory"
        android:text="@string/show_history"
        android:layout_marginStart="49dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/resultsButton" />

</android.support.constraint.ConstraintLayout>
